--- a/index.html
+++ b/index.html
@@ -57,26 +57,14 @@
 
                 <div class="col">
                     <h3>Datos Personales</h3>
-                    <ul>
-                        <li>
-                            <strong>Cumpleaños</strong>
-                            10/09/2023
                         </li>
                         <li>
                             <strong>Telefono</strong>
-                            +57 32059592212
-                        </li>
-                        <li>
-                            <strong>Email</strong>
-                            maikylocura@gmail.com
+                            +57 666666666666
                         </li>
                         <li>
                             <strong>Website</strong>
-                            www.enpienzaconpenzil.com
-                        </li>
-                        <li>
-                            <strong>Dirección</strong>
-                            Kr 7D 183B 20
+                            www.acidbugmusic.com
                         </li>
                     </ul>
                 </div>
